--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -15,89 +15,60 @@
 <body>
 
     <table>
-
-        <th colspan="4" style="text-align:center">
-
-
-            <h1> HTML TABLE EXAMPLE </h1>
-
-
-
         <tr>
-            <th><img src="https://media.istockphoto.com/id/1174686364/vector/kitchen-interior-illustration.jpg?s=170667a&w=0&k=20&c=karER-n228-r8dpAPVDXNdEVFvTOqIYPdjrnF-jVAWw=" height=200 width=200 alt="kitchen" /> </th>
-
-            <th>
-                <h2> Meal Planner </h2>
+            <th colspan="4" style="text-align:center">
+                <h1>HTML TABLE EXAMPLE</h1>
             </th>
-
+        </tr>
+        <tr>
             <th>
-                <h2>Recipe Index # </h2>
+                <img src="https://media.istockphoto.com/id/1174686364/vector/kitchen-interior-illustration.jpg?s=170667a&w=0&k=20&c=karER-n228-r8dpAPVDXNdEVFvTOqIYPdjrnF-jVAWw=" height="200" width="200" alt="kitchen">
             </th>
-
-
-
-        </tr>
-
-        <tr>
-            <th>  Week Starting </th>
-            <th>  2/15/2018 </th>
-            <th>  Instructions </th>
-
-        </tr>
-
-
-        <tr>
-            <th> <b> Day of the Week </b> </th>
-            <th> <b> Recipe Name </b> </th>
-            <th rowspan="8"> <b> Add the name of the recipe under the column Recipe Name </b>
             <th>
-
+                <h2>Meal Planner</h2>
+            </th>
+            <th>
+                <h2>Recipe Index #</h2>
+            </th>
         </tr>
-
-
+        <tr>
+            <th>Week Starting</th>
+            <th>2/15/2018</th>
+            <th>Instructions</th>
+        </tr>
+        <tr>
+            <th><b>Day of the Week</b></th>
+            <th><b>Recipe Name</b></th>
+            <th rowspan="8"><b>Add the name of the recipe under the column Recipe Name</b></th>
+        </tr>
         <tr>
             <td>Monday</td>
-
             <td>Spinach Feta</td>
         </tr>
-
         <tr>
             <td>Tuesday</td>
             <td>My New Recipe</td>
-
         </tr>
-
         <tr>
             <td>Wednesday</td>
-
-
+            <td></td>
         </tr>
-
         <tr>
             <td>Thursday</td>
-
-
+            <td></td>
         </tr>
-
         <tr>
             <td>Friday</td>
-
-
+            <td></td>
         </tr>
-
         <tr>
             <td>Saturday</td>
-
-
+            <td></td>
         </tr>
-
         <tr>
             <td>Sunday</td>
-
-
+            <td></td>
         </tr>
-
-
     </table>
 
 </body>
